--- a/Server/Properties/strings.resx
+++ b/Server/Properties/strings.resx
@@ -117,7 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="chatroom" xml:space="preserve">
-    <value>Chatroom</value>
+  <data name="chatroomTitle" xml:space="preserve">
+    <value>Local chatroom</value>
+  </data>
+  <data name="english" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="info" xml:space="preserve">
+    <value>We do recommend you to use port 11235 as default.</value>
+  </data>
+  <data name="language" xml:space="preserve">
+    <value>Language</value>
+  </data>
+  <data name="port" xml:space="preserve">
+    <value>Port</value>
+  </data>
+  <data name="spanish" xml:space="preserve">
+    <value>Spanish</value>
+  </data>
+  <data name="start" xml:space="preserve">
+    <value>Launch server</value>
+  </data>
+  <data name="welcome" xml:space="preserve">
+    <value>Welcome message</value>
   </data>
 </root>
