--- a/Server/Properties/strings.resx
+++ b/Server/Properties/strings.resx
@@ -123,6 +123,9 @@
   <data name="english" xml:space="preserve">
     <value>English</value>
   </data>
+  <data name="hostedAtPort" xml:space="preserve">
+    <value>hosted at port</value>
+  </data>
   <data name="info" xml:space="preserve">
     <value>We do recommend you to use port 11235 as default.</value>
   </data>
