--- a/Server/Properties/strings.es.resx
+++ b/Server/Properties/strings.es.resx
@@ -117,11 +117,47 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="assignedPort" xml:space="preserve">
+    <value>Puerto asignado</value>
+  </data>
+  <data name="chat" xml:space="preserve">
+    <value>Chat</value>
+  </data>
   <data name="chatroomTitle" xml:space="preserve">
     <value>Chatroom local</value>
   </data>
+  <data name="clients" xml:space="preserve">
+    <value>Clientes</value>
+  </data>
+  <data name="clientsNumber" xml:space="preserve">
+    <value>Número de clientes</value>
+  </data>
+  <data name="close" xml:space="preserve">
+    <value>Cerrar servidor</value>
+  </data>
+  <data name="closing" xml:space="preserve">
+    <value>Estás seguro de que deseas cerrar?</value>
+  </data>
+  <data name="closingTitle" xml:space="preserve">
+    <value>Cerrando</value>
+  </data>
+  <data name="connectedWithClient" xml:space="preserve">
+    <value>Conectado cliente {0} en el puerto {1}</value>
+  </data>
+  <data name="disconnectedClient" xml:space="preserve">
+    <value>Cliente {0} desconectado en el puerto {1}</value>
+  </data>
   <data name="english" xml:space="preserve">
     <value>Inglés</value>
+  </data>
+  <data name="enterNickname" xml:space="preserve">
+    <value>Introduce tu nombre de usuario</value>
+  </data>
+  <data name="error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="fillWelcome" xml:space="preserve">
+    <value>Debes insertar un mensaje de bienvenida</value>
   </data>
   <data name="hostedAtPort" xml:space="preserve">
     <value>alojado en el puerto</value>
@@ -129,11 +165,35 @@
   <data name="info" xml:space="preserve">
     <value>Te recomendamos que elijas como puerto por defecto el 11235.</value>
   </data>
+  <data name="ip" xml:space="preserve">
+    <value>IP del Cliente</value>
+  </data>
+  <data name="kick" xml:space="preserve">
+    <value>Echar al cliente seleccionado</value>
+  </data>
+  <data name="kickAll" xml:space="preserve">
+    <value>Echar A TODOS los clientes</value>
+  </data>
   <data name="language" xml:space="preserve">
     <value>Idioma</value>
   </data>
+  <data name="listeningAtPort" xml:space="preserve">
+    <value>escuchando en el puerto</value>
+  </data>
+  <data name="name" xml:space="preserve">
+    <value>Nombre del cliente</value>
+  </data>
+  <data name="options" xml:space="preserve">
+    <value>Opciones</value>
+  </data>
   <data name="port" xml:space="preserve">
     <value>Puerto</value>
+  </data>
+  <data name="running" xml:space="preserve">
+    <value>funcionando</value>
+  </data>
+  <data name="send" xml:space="preserve">
+    <value>Enviar</value>
   </data>
   <data name="spanish" xml:space="preserve">
     <value>Español</value>
