--- a/Server/Properties/strings.es.resx
+++ b/Server/Properties/strings.es.resx
@@ -240,4 +240,19 @@
   <data name="welcome" xml:space="preserve">
     <value>Mensaje de bienvenida</value>
   </data>
+  <data name="enterMessage" xml:space="preserve">
+    <value>Escribe algo para enviarlo!</value>
+  </data>
+  <data name="message" xml:space="preserve">
+    <value>Mensaje</value>
+  </data>
+  <data name="selectAClient" xml:space="preserve">
+    <value>Selecciona un cliente antes de intentar borrarlo!</value>
+  </data>
+  <data name="selectSomething" xml:space="preserve">
+    <value>Selecciona algo!</value>
+  </data>
+  <data name="uSure" xml:space="preserve">
+    <value>Estás seguro?</value>
+  </data>
 </root>
